<resources>
    <string name="app_name">SpotifyFake</string>
    <string name="play_button_description">Play button</string>
    <string name="pause_button_description">Pause button</string>
    <string name="shuffle_button_description">Shuffle button</string>
    <string name="repeat_button_description">Repeat button</string>
    <string name="skip_button_description">Skip button</string>
    <string name="previous_button_description">Previous button</string>
</resources>
